# network_mcp_service

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  data.py  main.py  models.py
tests/: test_api.py  test_mcp.py  test_mcp_discovery.py  test_mcp_methods.py  test_mcp_tools_jsonrpc.py
